2009-09-03   D. V. Wiebe <getdata@ketiltrout.net>  svn:308
	* test/put_sbit.c: Ensure data is signed.

	* src/internal.h: Add repr, complex_table, cy, cconst to _gd_private_entry;
	added representation stuff.
	* src/getdata.h.in: Add GD_E_BAD_REPR, GD_E_FORMAT_LITTERAL, GD_COMPLEX64,
	GD_COMPLEX128.  Add complex_scalars, cm, cb, ca to _gd_unified_entry.

	* src/entry.c (_GD_GetScalar): Set complex_scalars.
	* src/entry.c (_GD_CalculateEntry): Retrieve all scalars as GD_COMPLEX, and
	then realify back down.
	* src/types.c (_GD_ConvertType): Handle complex types.
	* src/getdata.c (_GD_FillFileFrame _GD_PolynomData _GD_MultiplyData): Handle
	complex types.
	* src/getdata.c (_GD_DoRaw): Handle complex data endianness correction
	properly.
	* src/getdata.c (_GD_CPolynomData _GD_CMultiplyData): Added.
	* src/getdata.c (_GD_DoMultiply _GD_DoPolynom): Handle complex input fields.
	* src/getdata.c (_GD_DoLinterp): Permit complex y-valued LUTs.
	* src/getdata.c (_GD_DoConst): Handle complex valued scalars.
	* src/flush.c (_GD_TypeName): Add GD_COMPLEX64 and GD_COMPLEX128.
	* src/flush.c (_GD_WriteConst): Write a complex literal.
	* src/flush.c (_GD_FieldSpec): Handle complex valued literals.
	* src/ascii.c (_GD_ScanFormat _GD_AsciiRead _GD_AsciiWrite): Handle complex
	data.
	* src/putdata.c (_GD_DoLinterpOut _GD_DoLincomOut _GD_DoPolynomOut
	_GD_DoConstOut): Handle complex writes.
	* src/del.c (_GD_DeReference): Handle complex scalars.
	* src/parse.c (_GD_RawType): Add GD_COMPLEX64 and GD_COMPLEX128.
	* src/parse.c (_GD_SetScalar): Handle complex literals.  This may now
	through the FORMAT suberror GD_E_FORMAT_LITTERAL.  Callers updated.
	* src/parse.c (_GD_ParseLincom _GD_ParsePolynom _GD_ParseConst): Handle
	complex literals.
	* src/mod.c (_GD_Change): Handle complex scalars.
	* src/mod.c (dirfile_alter_clincom dirfile_alter_cpolynom): Added.
	* src/add.c (_GD_Add): Handle complex scalars.
	* src/add.c (dirfile_add_clincom dirfile_add_cpolynom dirfile_madd_clincom